--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subrata Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1><span class="orange-color">Subrata</span> World!</h1>
+        <h3>Build climber and train stopper</h3>
+        <p>I am a university student. It scares me to think what I did and how I wasted my time in the first two years of university, so I vowed to see myself as a web developer in my last two years of university.I hoped that I could fulfill this promise in the name of God.</p>
+        <a class="link-button" target="_blank"" href=" https://subrata472.github.io/my-first-repo/"> Hire Me </a>
+    </div>
+    <div class="half-width">
+        <img src="shuvoweb.png" alt="">
+    </div>
+    </section>
 </body>
 </html>
