Dream Big added

--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
         <img src="shuvoweb.png" alt="">
     </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="shuvoweb1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web developer</h2>
+            <p>It was in my third year of university that I got attracted to web development. Earlier a senior brother had told me about this during my first year but I did not try it as I was not aware of it. When I came to the third year, I remembered what my brother had said, if I had started 2 years earlier, I would have progressed a lot.</p>
+            <a class="link-button" target="_blank" href="https://subrata472.github.io/my-first-repo/"> DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 </html>
