footer and experience added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
         <h1>Welcome to</h1>
         <h1><span class="orange-color">Subrata</span> World!</h1>
@@ -22,7 +22,7 @@
         <img src="shuvoweb.png" alt="">
     </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="shuvoweb1.png" alt="">
         </div>
@@ -34,5 +34,29 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1> 
+
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2022-present | Pro Level Web Developer</h3>
+            <p>A full-stack web developer is a person who can develop both client and server software.
+               In addition to mastering HTML and CSS, he/she also knows how to:
+                      Program a browser (e.g. using JavaScript, jQuery, Angular, or Vue) 
+                      Program a server (e.g. using PHP, ASP, Python, or Node) 
+                      Program a database (e.g. using SQL, SQLite, or MongoDB)</p>
+        </div>
+        <div id="baby-stack-experience" class="experience-item">
+            <h2>Baby Web Developer </h2>
+            <h3 class="orange-color">2022-2024 | Hero Learner developer</h3>
+            <p>First things first, web development is basically about linking things together. If you get how to link pages to each , try to understand things like how HTML pages are linked to the code in JavaScript or Python or PHP.</p>
+        </div>
+
+        </div>
+    </section>
+    <footer>
+        <p> @ Subrata 2024,a Programing Hero initiative.</p>
+    </footer>
 </body>
 </html>
